--- a/index.html
+++ b/index.html
@@ -5,5 +5,8 @@
 
 	<body>
 		<script src="build/index.js" type="text/javascript"></script>
+		<br>
+		controls:<br>
+		arrows to move<br>
 	</body>
 </html>
